LPS-124515 Fix alignment of top calendar buttons

--- a/modules/apps/calendar/calendar-web/src/main/resources/META-INF/resources/css/main.scss
+++ b/modules/apps/calendar/calendar-web/src/main/resources/META-INF/resources/css/main.scss
@@ -476,27 +476,34 @@
 	}
 }
 
-.scheduler-base-hd .scheduler-base-views {
-	align-items: start;
+.scheduler-base-hd {
+	&.row {
+		justify-content: space-between;
+		margin: 0;
+	}
 
-	button {
-		border-color: #cdced9;
-		border-right: 1px;
-		color: #6b6c7e;
-		margin-left: 0 !important;
+	.scheduler-base-views {
+		align-items: start;
 
-		&:hover,
-		&:focus,
-		&:hover,
-		&.active {
-			background-color: #f1f2f5;
-			color: inherit;
-		}
+		button {
+			border-color: #cdced9;
+			border-right: 1px;
+			color: #6b6c7e;
+			margin-left: 0 !important;
 
-		&.btn:last-of-type {
-			border-bottom-right-radius: 4px;
-			border-right: solid 1px #cdced9;
-			border-top-right-radius: 4px;
+			&:hover,
+			&:focus,
+			&:hover,
+			&.active {
+				background-color: #f1f2f5;
+				color: inherit;
+			}
+
+			&.btn:last-of-type {
+				border-bottom-right-radius: 4px;
+				border-right: solid 1px #cdced9;
+				border-top-right-radius: 4px;
+			}
 		}
 	}
 }
